====================
Bazaar Release Notes
====================

.. contents::

IN DEVELOPMENT
==============

  NOTES WHEN UPGRADING:

  FEATURES:

  PERFORMANCE:

   * Commit in quiet mode is now slightly faster as the information to
     output is no longer calculated. (Ian Clatworthy)

   * Inventory serialisation no longer double-sha's the content.
     (Robert Collins)

   * XML inventory serialisation takes 20% less time while being stricter about
     the contents. (Robert Collins)

  IMPROVEMENTS:

   * Mutt is now a supported mail client; set ``mail_client=mutt`` in your
     bazaar.conf and ``send`` will use mutt. (Keir Mierle)

  BUG FIXES:

   * The basename, not the full path, is now used when checking whether
     the profiling dump file begins with ``callgrind.out`` or not. This
     fixes a bug reported by Aaron Bentley on IRC. (Ian Clatworthy)

   * Commands reporting exceptions can now be profiled and still have their
     data correctly dumped to a file. For example, a ``bzr commit`` with
     no changes still reports the operation as pointless but doing so no
     longer throws away the profiling data if this command is run with
     ``--lsprof-file callgrind.out.ci`` say. (Ian Clatworthy)

  API BREAKS:

   * The ``VersionedFile`` interface now allows content checks to be bypassed
     by supplying check_content=False.  This saves nearly 30% of the minimum
     cost to store a version of a file. (Robert Collins)

   * Tree's with bad state such as files with no length or sha will no longer
     be silently accepted by the repository XML serialiser. To serialise
     inventories without such data, pass working=True to write_inventory.
     (Robert Collins)

  INTERNALS:

   * New method on xml serialisers, write_inventory_to_lines, which matches the
     API used by knits for adding content. (Robert Collins)

  TESTING:


bzr 0.91rc2 2007-09-11
======================
